# Wave_algo

./: .gitignore  pyproject.toml  wave_strategy.md
.trellis/: .template-hashes.json
.trellis/spec/backend/: directory-structure.md  index.md  quality-guidelines.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/05-22-wave-strategy-algo/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/workspace/dan/: index.md  journal-1.md
tests/: test_backtest.py  test_data.py  test_fibonacci.py  test_htf.py  test_ltf.py  test_pivots.py  test_rules.py  test_scoring.py  test_signal_generation_cli.py  test_signals.py  test_timeframes.py
wave_algo/: __init__.py  backtest.py  cli.py  data.py  fibonacci.py  htf.py  ltf.py  models.py  pivots.py  rules.py  scoring.py  signals.py  timeframes.py
